Working on reducing number of open indices at a given time, non transactions are now weekly by default.

--- a/csm_big_data/logstash/config/logstash.conf
+++ b/csm_big_data/logstash/config/logstash.conf
@@ -115,7 +115,7 @@ output {
     if "transaction" not in [tags] {
         elasticsearch {
             hosts => [ _ELASTIC_IP_PORT_LIST_ ]
-            index => "cast-%{type}-%{+YYYY.MM.dd}"
+            index => "cast-%{type}-%{+YYYY.ww}"
             http_compression =>true
             document_type => "_doc"
         }
